--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,98 @@
+alabaster==0.7.16
+annotated-types==0.6.0
+anyio==3.7.1
+argcomplete==3.4.0
+Babel==2.14.0
+bcrypt==4.1.2
+build==1.2.1
+CacheControl==0.14.0
+certifi==2024.2.2
+charset-normalizer==3.3.2
+cleo==2.1.0
+click==8.1.7
+colorama==0.4.6
+contourpy==1.2.0
+crashtest==0.4.1
+cycler==0.12.1
+distlib==0.3.8
+docutils==0.20.1
+dulwich==0.21.7
 fastapi==0.104.1
+fastjsonschema==2.20.0
+filelock==3.15.3
+fonttools==4.49.0
+h11==0.14.0
+idna==3.7
+imagesize==1.4.1
+iniconfig==2.0.0
+installer==0.7.0
+jaraco.classes==3.4.0
+Jinja2==3.1.4
+joblib==1.3.2
+keyring==24.3.1
+kiwisolver==1.4.5
+loguru==0.7.2
+markdown-it-py==3.0.0
+MarkupSafe==2.1.5
+matplotlib==3.8.3
+mdit-py-plugins==0.4.0
+mdurl==0.1.2
+more-itertools==10.3.0
+msgpack==1.0.8
+myst-parser==2.0.0
+numpy==1.26.4
+packaging==24.0
+pandas==2.1.4
+pexpect==4.9.0
+pillow==10.2.0
+pipx==1.6.0
+pkginfo==1.11.1
+platformdirs==4.2.2
+pluggy==1.5.0
+poetry==1.8.3
+poetry-core==1.9.0
+poetry-plugin-export==1.8.0
+ptyprocess==0.7.0
+PuLP==2.7.0
 pydantic==2.5.2
-rec_op_lem_prices @ git+https://gitlab.inesctec.pt/cpes/european-projects/enershare/rec_operation_and_lem_prices.git#egg=rec_op_lem_prices
+pydantic_core==2.14.5
+Pygments==2.17.2
+pyparsing==3.1.2
+pyproject_hooks==1.1.0
+pytest==8.1.1
+python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
+pytz==2024.1
+pywin32-ctypes==0.2.2
+PyYAML==6.0.1
+rapidfuzz==3.9.3
+rec-op-lem-prices @ git+https://gitlab.inesctec.pt/cpes/european-projects/enershare/rec_operation_and_lem_prices.git@96fff58f4d8a39f8d99954ecb8eb7acb1ebd4954
+requests==2.32.2
+requests-toolbelt==1.0.0
+ruff==0.3.7
+setuptools==70.1.0
+shellingham==1.5.4
+six==1.16.0
+sniffio==1.3.1
+snowballstemmer==2.2.0
+Sphinx==7.3.7
+sphinx-rtd-theme==2.0.0
+sphinxcontrib-applehelp==1.0.8
+sphinxcontrib-devhelp==1.0.6
+sphinxcontrib-htmlhelp==2.0.5
+sphinxcontrib-jquery==4.1
+sphinxcontrib-jsmath==1.0.1
+sphinxcontrib-qthelp==1.0.7
+sphinxcontrib-serializinghtml==1.1.10
+starlette==0.27.0
+tomlkit==0.12.5
+trove-classifiers==2024.5.22
+-e git+https://github.com/CPES-Power-and-Energy-Systems/tsg-client.git@d1f5c2a6c9466b03703d6aa68b8fc2f0b6f14cbd#egg=tsg_client
+typing_extensions==4.10.0
+tzdata==2024.1
+urllib3==2.2.1
+userpath==1.9.2
 uvicorn==0.24.0.post1
-loguru~=0.7.2
-pandas~=2.1.4
+virtualenv==20.26.2
+wheel==0.41.2
+win32-setctime==1.1.0
